# SevenLeaf

./: .clang-format  .editorconfig  CMakeLists.txt
cmake/: AddFilepathMacro.cmake  Info.plist.in  SevenLeafHelpers.cmake
libcompositor/: CMakeLists.txt
libcompositor/include/compositor/: CpsrGraphics.h  CpsrGraphics.hpp  CpsrTypedefs.h  CpsrUtils.h
libcompositor/include/compositor/vector/: CpsrSingle4.h  CpsrSingle4x4.h  float32x2_t.h  float32x4_t.h  int16x8_t.h  matrix3x2_t.h  matrix4x4_t.h  simd_base.h  uint16x8_t.h
libcompositor/source/: CpsrSource.c
libcompositor/source/dx12/: CpsrBuffer.c  CpsrCommandBuffer.c  CpsrCommandQueue.c  CpsrComputeContext.c  CpsrComputePipelineState.c  CpsrDevice.cpp  CpsrFence.c  CpsrGraphics+Private.h  CpsrGraphicsContext.c  CpsrGraphicsPipelineState.c  CpsrShaderFunction.c  CpsrShaderLibrary.c  CpsrSwapChain.c  CpsrTexture2D.c
libcompositor/source/mac/: CpsrCpu.m
libcompositor/source/mtl2/: CpsrBuffer.m  CpsrCommandBuffer.m  CpsrCommandQueue.m  CpsrComputeContext.m  CpsrComputePipelineState.m  CpsrDevice.m  CpsrFence.m  CpsrGraphics+Private.h  CpsrGraphicsContext.m  CpsrGraphicsPipelineState.m  CpsrHeap.m  CpsrShaderFunction.m  CpsrShaderLibrary.m  CpsrSwapChain.m  CpsrTexture2D.m
libcompositor/source/vector/: CpsrVector.cpp
libosutil/: CMakeLists.txt
libosutil/include/: osutil.h  osutil_atomic.h  osutil_atomic_posix.h  osutil_atomic_win.h  osutil_base.h  osutil_dll.h  osutil_file.h  osutil_filepath.h  osutil_string.h  osutil_system.h  osutil_thread.h  osutil_time.h  osutil_uint128_t.h
libosutil/source/apple/: osutil_filepath.m  osutil_system.c  osutil_thread.m  osutil_time.c
libosutil/source/linux/: osutil_time.c
libosutil/source/posix/: osutil_dll.c  osutil_file.c
libosutil/source/win/: osutil_dll.c  osutil_filepath.c  osutil_string.c  osutil_system.c  osutil_thread.c  osutil_time.c
libsevenleaf/: CMakeLists.txt
libsevenleaf/include/: SnlfConfig.h  SnlfCore.h  SnlfDisplay.h  SnlfDisplayWindow.hpp  SnlfGraphicsDefines.h  SnlfGraphicsFrame.h  SnlfLog.h  SnlfModule.h  SnlfPrimitives.h
libsevenleaf/include/containers/: SnlfArray.h  SnlfLockFreeQueue+Prototypes.h  SnlfLockFreeQueue.h
libsevenleaf/include/geometry/: SnlfCircleGeometry.hpp  SnlfPlaneGeometry.hpp  SnlfRectangleGeometry.hpp
libsevenleaf/include/utils/: SnlfMath.hpp
libsevenleaf/source/: SnlfCore+Private.h  SnlfCore.c  SnlfDisplay.c  SnlfDisplayWindow.cpp  SnlfGenerator.c  SnlfGeneratorSourceGraphics.c  SnlfGraphics+Private.h  SnlfGraphics.c  SnlfGraphicsContext.c  SnlfGraphicsFrame+Private.h  SnlfGraphicsFrame.c  SnlfInput.c  SnlfInputSourceGraphics.c  SnlfLog.c  SnlfMessage.c  SnlfMessage.h  SnlfModule.c  SnlfObject.c  SnlfSource.c  SnlfSourceGraphics.c  SnlfTransition.c  SnlfTransitionGraphics.c  SnlfUtils+Private.h
libsevenleaf/source/apple/: Draw.metal  DrawColor.metal  Posterization.metal
libsevenleaf/source/win/: PassThrough.hlsl
plugins/: CMakeLists.txt
plugins/apple-avcapture/: CMakeLists.txt
plugins/apple-avcapture/source/: SnlfAVCapture.m  SnlfAVDevicesObserver.h  SnlfAVDevicesObserver.m
plugins/generic-utils/: CMakeLists.txt
plugins/generic-utils/source/: SnlfColorInput.c
plugins/generic-utils/source/apple/: ColorInputShader.metal
sevenleafapp/: CMakeLists.txt
sevenleafapp/include/: SnlfApp.hpp  SnlfPreviewWindow.hpp
sevenleafapp/source/: SnlfApp.cpp  SnlfPreviewWindow.cpp
tests/: CMakeLists.txt  main.c
